# blazingapp-task

./: Cargo.toml  README.md
src/: main.rs  math.rs  tick_accounts_utils.rs  utils.rs
