[package]
name = "blazingapp-task"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
itertools = "0.14.0"
arrayref = "0.3.6"

anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
# TODO add tag
solana-program = ">=1.16, <1.18"
solana-sdk = ">=1.16, <1.18"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
solana-rpc-client = ">=1.16, <1.18"
spl-token = "=4.0.0"

raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", default-features = false }

